--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,1 +1,13 @@
-<h1> welcome to flixter</h1>
+<div class="hero">
+	<br /><br /><br /><br /><br /><br /><br />
+
+  <div class="frosty col-xs-2 col-xs-offset-5 text-center">
+  	
+    <h1> welcome to flixter</h1>
+    <br />
+    <h2> Your window to the world</h2>
+    
+    <%= link_to "Learn More", "#", :class => 'btn btn-success' %>
+    <br /><br />
+  </div>
+</div>
