--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,11 +3,26 @@
 
   <div class="frosty col-xs-2 col-xs-offset-5 text-center">
   	
-    <h1> welcome to flixter</h1>
+    <h1> Welcome to Flixter</h1>
     <br />
     <h2> Your window to the world</h2>
     
     <%= link_to "Learn More", "#", :class => 'btn btn-success' %>
     <br /><br />
   </div>
+</div>
+
+<br />
+<div class="col-xs-10 col-xs-offset-1 features text-center">
+	<div class="col-sm-4">
+		<h3>Feature 1 </h3>
+	</div>
+
+	<div class ="col-sm-4">
+		<h3>Feature 2</h3>
+	</div>
+
+	<div class="col-sm-4">
+		<h3>Feature 3</h3>
+	</div>
 </div>
