--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -10,7 +10,20 @@
 	font-family: "Helvetica Neue", Helvetica;
 	font-weight: 100;
 	color: white;
-  
+}
+
+.booyah-box {
+	-moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+	-webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+	box-shadow: 1px 1px 2px 0 #d0d0d0;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+    padding:10px;
+}
+
+.booyah-box h2, .booyah-box h1 {
+	margin:10px;
 }
 
 .hero {
@@ -51,4 +64,8 @@ body {
 
 .btn {
 	border-radius:0;
+}
+
+.clr {
+	clear:both;
 }
