--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<div id="wrap">
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -24,16 +25,42 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Link</a></li>
+        <li><a href="#">See all Courses</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">       
-        <li><a href="#">Separated link</a></li>
+      <ul class="nav navbar-nav navbar-right"> 
+        <% if user_signed_in? %>
+          <li><%= link_to "Log Out", destroy_user_session_path, :method => :delete %></li>
+        <% else %>   
+          <li><%= link_to 'Log In', user_session_path %></li>
+          <li><%= link_to 'Create a Login', new_user_registration_path %></li>   
+        <% end %> 
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
+
+  <% if notice.present? %>
+    <p class="notice"><%=notice %></p>
+  <% end %>
+
+  <% if alert.present? %>
+    <P class="alert"><%=alert%></p>
+  <% end %>
+
+
 <%= yield %>
+
+</div>
+
+<br class="clr" />
+<div id="footer">
+  <div class="container">
+    <b>Footer Here</b>
+    <br />
+    <%= link_to 'Link', '#' %>
+  </div>
+</div>
 
 </body>
 </html>
