--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -7,7 +7,7 @@
     <br />
     <h2> Your window to the world</h2>
     
-    <%= link_to "Learn More", "#", :class => 'btn btn-success' %>
+    <%= link_to "Learn More", courses_path, :class => 'btn btn-success' %>
     <br /><br />
   </div>
 </div>
