--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -13,6 +13,17 @@
 		<% @course.sections.each do |section| %>
 		<li>
 			<%= section.title %>
+			<%= link_to 'New Lesson', new_instructor_section_lesson_path(section), :class => 'pull-right btn btn-primary btn-xs' %>
+			<u1>
+				<% section.lessons.each do |lesson| %>
+					<li>
+						<b><%= lesson.title %></b>
+						-
+						<%= lesson.subtitle %>
+					</li>
+				<% end %>
+			</u1>
+			<br class="clr"/>
 		</li>
 		<% end %>
 	</u1>
