--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,3 +1,10 @@
+<script>
+$(function() {
+  	$('.lessons li').hide('slow');
+});
+</script>
+
+
 <br />
 <div class="booyah-box col-xs-10 col-xs-offset-1">
 	<h1 class="text-center"><%= current_course.title %></h1>
@@ -15,9 +22,12 @@
 		<li>
 			<%= section.title %>
 			<%= link_to 'New Lesson', new_instructor_section_lesson_path(section), :class => 'pull-right btn btn-primary btn-xs' %>
-			<u1>
+
+			<br class="clr" />
+
+			<u1 class="lessons">
 				<% section.lessons.rank(:row_order).each do |lesson| %>
-					<li>
+					<li data-item-id=<%= lesson.id%>>
 						<b><%= lesson.title %></b>
 						-
 						<%= lesson.subtitle %>
