--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -25,15 +25,15 @@ $(function() {
 
 			<br class="clr" />
 
-			<u1 class="lessons">
+			<ul class="lessons">
 				<% section.lessons.rank(:row_order).each do |lesson| %>
-					<li data-item-id=<%= lesson.id%>>
+					<li data-item-id="<%= lesson.id%>">
 						<b><%= lesson.title %></b>
 						-
 						<%= lesson.subtitle %>
 					</li>
 				<% end %>
-			</u1>
+			</ul>
 			<br class="clr"/>
 		</li>
 		<% end %>
