--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,6 +1,15 @@
 <script>
 $(function() {
-  	$('.lessons li').hide('slow');
+  	$('.lessons').sortable({
+  		update: function( event, ui ) {
+  			$.ajax({
+  				type: 'PUT',
+  				url: ui.item.data('update-url'),
+  				dataType: 'json',
+  				data: { lesson: { row_order_position: ui.item.index() } }
+  			});
+  		}
+  	});
 });
 </script>
 
@@ -17,7 +26,7 @@ $(function() {
 		<%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), :class => 'btn btn-primary btn-lg' %>
 	</div>
 
-	<u1>
+	<ul>
 		<% current_course.sections.each do |section| %>
 		<li>
 			<%= section.title %>
@@ -25,17 +34,17 @@ $(function() {
 
 			<br class="clr" />
 
-			<u1 class="lessons">
+			<ul class="lessons">
 				<% section.lessons.rank(:row_order).each do |lesson| %>
-					<li data-item-id=<%= lesson.id%>>
+					<li data-update-url="<%= instructor_lesson_path(lesson) %>">
 						<b><%= lesson.title %></b>
 						-
 						<%= lesson.subtitle %>
 					</li>
 				<% end %>
-			</u1>
+			</ul>
 			<br class="clr"/>
 		</li>
 		<% end %>
-	</u1>
+	</ul>
 </div>
