--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,11 +63,43 @@
 <br class="clr" />
 <div id="footer">
   <div class="container">
+    <div class="col-xs-12 col-sm-3">
     <b>Teachers</b>
     <br />
     <%= link_to 'Teach a Course', new_instructor_course_path %>
+    <br />
+    <%= link_to "My Dashboard", dashboard_path %>
+    </div>
+  <div class="col-xs-12 col-sm-3">
+    <b>About</b>
+    <br/>
+    <%= link_to "Team", '#' %>
+    <br/>
+    <%= link_to 'Careers', '#' %>
+    <br/>
+    <%= link_to 'Privacy Policy', '#' %>
   </div>
+<div class="col-xs-12 col-sm-3">
+  <b>Contact</b>
+  <br/>
+  hil-tfhp@gmail.com
+  <br/>
+  Chicago, IL
 </div>
+<div class="col-xs-12 col-sm-3 social">
+  <b>Social</b>
+  <br/>
+  <br/>
+  <%= link_to 'https://accounts.google.com' do %>
+    <%= image_tag 'g.png.png', :class => 'social-button' %>
+  <% end %>
+  <%= link_to 'https://www.linkedin.com' do %>
+    <%= image_tag 'linkedin.png', :class => 'social-button' %>
+  <% end %>
+</div>
+</div>
+</div>
+
 
 </body>
 </html>
