index page wording and links

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -147,3 +147,12 @@ ul .header {
 .lessons li p {
 	margin:0;
 }
+
+.heading {
+	color: white !important;
+}
+
+.heading:hover {
+	color:green !important;
+	text-decoration: none;
+}
