index page picture movement

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -46,6 +46,7 @@
 	background-size: cover;
 	height: 370px;
 	box-shadow: 0px 3px 8px #2a2a2a;
+	background-attachment: scroll;
 }
 
 h1, h2, h3, h4, h5, h6, .navbar {
