--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,12 +1,14 @@
 <div class="hero">
-	<br /><br /><br /><br /><br /><br />
+	<br /><br /><br /><br /><br />
 
-  <div class="frosty col-xs-2 col-xs-offset-5 text-center">
+  <div class="frosty col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4 col-lg-2 col-lg-offset-5 text-center">
   	<br />
     <h1> Welcome to Flixter</h1>
     <br />
-    <h3> Your window to the world</h2>
-    
+  </div>
+  <div class="frosty col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4 col-lg-2 col-lg-offset-5 text-center">
+    <h3 class= "hidden-xs"> Your window to the world</h2>
+    <br/>
     <%= link_to "Learn More", courses_path, :class => 'btn btn-success' %>
     <br /><br />
   </div>
